<resources>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_complete_inter_ad_unit_id">ca-app-pub-inter</string>
    <string name="action_reply">Reply</string>
    <string name="action_share">Share</string>
    <string name="ad">Ad</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_app_id_mp" />
    <string name="ad_attribution">Ad</string>
    <string name="add_email">Add Email</string>
    <string name="add_event">Add Event</string>
    <string name="address">Address</string>
    <string name="address_book">Address Book</string>
    <string name="address_name">Address Name</string>
    <string name="adjust_native_am">ca-app-pub-native</string>
    <string name="adjust_native_fb" />
    <string name="adjust_native_mp" />
    <string name="app_name">QR Code Reader</string>
    <string name="app_picker_name">Applications</string>
    <string name="app_settings">App Settings</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure you want to Delete all History?</string>
    <string name="auto_copy_to_clipboard">Auto Copy to Clipboard</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="auto_web_search">Auto Web Search</string>
    <string name="background">Background</string>
    <string name="banner_ad_unit_id">ca-app-pub-banner</string>
    <string name="banner_ad_unit_id_rect">ca-app-pub-banner</string>
    <string name="banner_am">ca-app-pub-banner</string>
    <string name="banner_fb" />
    <string name="banner_mp" />
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="book_code">Book code</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Book Price</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_history">Bookmark History</string>
    <string name="bookmark_native_mp" />
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="business_card">Business Card</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="by_proceeding_you_agree_to_the">By proceeding you agree to the</string>
    <string name="calender">Calender</string>
    <string name="cancel">Cancel</string>
    <string name="card">Card</string>
    <string name="card_native_mp" />
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="colors">Colors</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="company">Company</string>
    <string name="company_name">Company name</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="contact">Contact</string>
    <string name="content">Content</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="copied_to_clip">Copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="data_type">Data Type</string>
    <string name="date_and_time">Date and Time</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_web_client_id" />
    <string name="define_zxingandroidembedded" />
    <string name="delete_history">Delete History</string>
    <string name="demo_text">Demo Text</string>
    <string name="developer">Developer</string>
    <string name="dial">Dial</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="enter_information">Enter information</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="exit_native_am">ca-app-pub-native</string>
    <string name="exit_native_mp" />
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="general">General</string>
    <string name="hidden">Hidden?</string>
    <string name="network_type">Network Type</string>
    <string name="password">Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_this_app_and_help_support_to_improve_more_features">Rate this app and help support to improve more features</string>
    <string name="rate_us">Rate Us</string>
    <string name="save_history">Save History</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="sound">Sound</string>
    <string name="ssid">SSID</string>
    <string name="tell_your_friends">Tell Your Friends</string>
    <string name="vibration">Vibration</string>
</resources>