<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0" android:layout_below="@id/view_offset_helper" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/search_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:onClick="buttonClick">
        <ImageView android:id="@id/search_img" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_search" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search" android:layout_below="@id/search_img" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/copy_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:onClick="buttonClick">
        <ImageView android:id="@id/copy_img" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_copy" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" android:layout_below="@id/copy_img" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/share_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:onClick="buttonClick">
        <ImageView android:id="@id/share_img" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_share" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:layout_below="@id/share_img" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>