<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/generate_btn" android:layout_below="@id/top_gen_layout" android:paddingStart="20.0dip" android:paddingEnd="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="15.0sp" android:textColor="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ssid" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:counterEnabled="true" app:counterMaxLength="15">
            <EditText android:textSize="18.0sp" android:id="@id/wifi_gen_name_txt" android:background="@android:color/transparent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>
        <View android:background="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/password" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:counterEnabled="true" app:counterMaxLength="20">
            <EditText android:textSize="18.0sp" android:id="@id/gene_pass_txt" android:background="@android:color/transparent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="20" android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <View android:background="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/network_type" />
        <Spinner android:id="@id/wifi_gen_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        <View android:background="@color/history_item_text_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <CheckBox android:textColor="@color/history_item_text_gray" android:id="@id/wifi_gen_check" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/hidden" />
        <FrameLayout android:id="@id/fl_adplaceholder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" />
    </LinearLayout>
</ScrollView>