<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/TextAppearance.FontPath" android:textSize="18.0sp" android:textColor="#fff44336" android:gravity="center_horizontal" android:id="@id/title_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="4.0dip" android:text="@string/exit" />
    <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/text_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/do_you_want_to_exit" android:layout_below="@id/title_dialog" />
    <RelativeLayout android:id="@id/ad_layout_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/text_dialog">
        <FrameLayout android:id="@id/fl_adplaceholder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rating_stars_main_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ad_layout_dialog">
        <View android:id="@id/divider_dl" android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginBottom="15.0dip" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" />
        <TextView android:gravity="center" android:id="@id/rate_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/rate_this_app_and_help_support_to_improve_more_features" android:layout_below="@id/divider_dl" android:layout_marginStart="35.0dip" android:layout_marginEnd="35.0dip" />
        <me.zhanghai.android.materialratingbar.MaterialRatingBar android:id="@id/rating_stars_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:layout_below="@id/rate_txt" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" app:mrb_progressTint="@color/pink" style="@style/Widget.MaterialRatingBar.RatingBar" />
    </RelativeLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/yes_txt" android:paddingRight="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/exit" android:layout_below="@id/rating_stars_main_layout" android:layout_alignParentEnd="true" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/no_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="15.0dip" android:text="@string/cancel" android:layout_below="@id/rating_stars_main_layout" android:layout_marginEnd="40.0dip" android:layout_toStartOf="@id/yes_txt" />
</RelativeLayout>